Payment Gateway Microservice

--- a/form/payment-request.html
+++ b/form/payment-request.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<FORM method="post" name="ePayment" action="https://sandbox.ipay88.com.ph/epayment/entry.asp">
+<FORM method="post" name="ePayment" action="postlinkhere">
 	<INPUT type="hidden" name="MerchantCode" value="PH00419">
 	<INPUT type="hidden" name="PaymentId" value="1">
 	<INPUT type="hidden" name="RefNo" value="A00000001">
@@ -17,8 +17,8 @@
 	<INPUT type="hidden" name="Remark" value="">
 	<INPUT type="hidden" name="Lang" value="UTF-8">
 	<INPUT type="hidden" name="Signature" value="v4f93AFaktObj79KywOlXbLAeTc=">
-	<INPUT type="hidden" name="ResponseURL" value="https://nt6kh0sqzb.execute-api.us-east-1.amazonaws.com/dev/ipay88/request-response">
-	<INPUT type="hidden" name="BackendURL" value="https://nt6kh0sqzb.execute-api.us-east-1.amazonaws.com/dev/ipay88/backend-responst">
+	<INPUT type="hidden" name="ResponseURL" value="responselinkhere">
+	<INPUT type="hidden" name="BackendURL" value="backendurlhere">
 	<INPUT type="submit" value="Proceed with Payment" name="Submit">
 </FORM>
 
